Update swagger definitions and added new type route for sensors
