# backend/src/routes/sensors.js
@@ -26,4 +26,9 @@ export function routes(router){
             ctx.status = 200
             ctx.body = res
         })
+        .get('/sensors/{type}/type', async ctx => {
+            const res = await filterByType(connect(ctx), ctx.query.type)
+            ctx.status = 200
+            ctx.body = res
+        })
 }
